Sauvegarde des changements avant de basculer sur develop